--- a/Interpersonal/WPFViewer/KinectWindow.xaml
+++ b/Interpersonal/WPFViewer/KinectWindow.xaml
@@ -158,7 +158,17 @@
 
             </StackPanel>
             <StackPanel DockPanel.Dock="Bottom" Orientation="Vertical" Margin="15,35,15,15" Background="#565656">
-                <Label Content="alerts" Margin="0,10,0,0" FontFamily="Segoe UI" FontSize="16" Foreground="#7D7D7D" />
+                <Label Content="alerts" Margin="0,10,0,0" FontFamily="Segoe UI" FontSize="22" Foreground="White" />
+                <ListView Name="alertsList" Background="Transparent" BorderThickness="0">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Horizontal" VerticalAlignment="Center" HorizontalAlignment="Left">
+                                <TextBox Text="{Binding Message}" Width="40" VerticalAlignment="Center"  Background="Transparent"
+                                         FontFamily="Segoe UI" FontSize="16" Foreground="#7D7D7D"/>
+                            </StackPanel>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
             </StackPanel>
         </DockPanel>
         
